--- a/stylesheet.css
+++ b/stylesheet.css
@@ -81,3 +81,9 @@ body {
   background: linear-gradient(to right, var(--mainColor), var(--baseColor));
   z-index: 0;
 }
+
+.voted {
+  background-color: #198754 !important;
+  box-shadow: 0 0 8px #198754;
+  transition: background-color 0.3s ease;
+}
